Added edit or create (create) spaceship activity and added username display on welcome activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.spaceshipmanagementsystem" >
+    package="com.example.spaceshipmanagementsystem">
 
     <application
         android:allowBackup="true"
@@ -8,14 +8,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SpaceshipManagementSystem" >
+        android:theme="@style/Theme.SpaceshipManagementSystem">
+        <activity
+            android:name=".CreateOrEditSpaceshipActivity"
+            android:exported="false" />
         <activity
             android:name=".WelcomeActivity"
             android:exported="false"
-            android:parentActivityName=".LoginActivity"/>
+            android:parentActivityName=".LoginActivity" />
         <activity
             android:name=".LoginActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
